--- a/in_browser/index.html
+++ b/in_browser/index.html
@@ -18,11 +18,11 @@
             first: "Doug",
             actions: ['bike', 'hike', 'ski', 'surf'],
             printActions: function() {
-                var _this=this;
+
                 this.actions.forEach(function(action) {
-                    var str = _this.first + " likes to " + action;
+                    var str = this.first + " likes to " + action;
                     console.log(str);
-                });
+                }.bind(this));
             }
         };
         person.printActions();
