--- a/in_browser/index.html
+++ b/in_browser/index.html
@@ -30,15 +30,15 @@
 
 
 
-        var {title,price} = {
+        var {destination,travelers} = {
             destination: "Chile",
             travelers: 2,
             activity: "skiing",
             cost: 4000
         };
 
-        console.log(vacation.destination);
-        console.log(vacation.travelers);
+        console.log(destination);
+        console.log(travelers);
     </script>
 </body>
 </html>
