--- a/in_browser/index.html
+++ b/in_browser/index.html
@@ -13,32 +13,20 @@
 
 
     <script type="text/babel">
-        /*
-         var vacation = {
-         destination: "Chile",
-         travelers: 2,
-         activity: "skiing",
-         cost: 4000
-         };
 
-         console.log(vacation.destination);
-         console.log(vacation.travelers);
-         */
-
-
-
-
-
-
-        var {title,price} = {
+        var vacation = {
             destination: "Chile",
             travelers: 2,
             activity: "skiing",
             cost: 4000
         };
 
-        console.log(vacation.destination);
-        console.log(vacation.travelers);
+        function vacationMarketing({destination, activity}) {
+            return `Come to ${destination} and do some ${activity}`
+        }
+
+        console.log(vacationMarketing(vacation));
+
     </script>
 </body>
 </html>
