--- a/in_browser/index.html
+++ b/in_browser/index.html
@@ -13,22 +13,29 @@
 
 
     <script type="text/babel">
+        function* director(){
 
-   function* director(){
-
-       yield "Three";
-       yield "Two";
-       yield "One";
-       yield "Action";
-   }
+            yield "Three";
+            yield "Two";
+            yield "One";
+            yield "Action";
+        }
 
         var action = director();
 
-        console.log(action.next());
-   console.log(action.next());
-   console.log(action.next());
-   console.log(action.next());
-   console.log(action.next());
+        /*
+         console.log(action.next());
+         console.log(action.next());
+         console.log(action.next());
+         console.log(action.next());
+         console.log(action.next());
+         */
+
+        console.log(action.next().value);
+        console.log(action.next().value);
+        console.log(action.next().value);
+        console.log(action.next().value);
+        console.log(action.next().value);
     </script>
 </body>
 </html>
