--- a/in_browser/index.html
+++ b/in_browser/index.html
@@ -14,21 +14,27 @@
 
     <script type="text/babel">
 
-   function* director(){
+        function* eachItem(arr) {
+            for(var i=0; i< arr.length; i++) {
+                yield arr[i];
+            }
+        }
 
-       yield "Three";
-       yield "Two";
-       yield "One";
-       yield "Action";
-   }
+        var letters = eachItem(["a", "b", "c", "d", "e", "f", "g"]);
 
-        var action = director();
+        var abcs = setInterval(function(){
+                    var letter = letters.next();
+                    if(letter.done) {
+                        clearInterval(abcs);
+                        console.log("Now I know my ABC's");
+                    } else {
+                        console.log(letter.value);
+                    }
+                },
 
-        console.log(action.next());
-   console.log(action.next());
-   console.log(action.next());
-   console.log(action.next());
-   console.log(action.next());
+                500);
+
+
     </script>
 </body>
 </html>
