--- a/in_browser/index.html
+++ b/in_browser/index.html
@@ -14,27 +14,14 @@
 
     <script type="text/babel">
 
-        function* eachItem(arr) {
-            for(var i=0; i< arr.length; i++) {
-                yield arr[i];
-            }
-        }
+        const id = Symbol();
+        const courseInfo = {
+            title: "ES6",
+            topics: ["babel", "syntax", "functions", "classes"],
+        };
 
-        var letters = eachItem(["a", "b", "c", "d", "e", "f", "g"]);
-
-        var abcs = setInterval(function(){
-                    var letter = letters.next();
-                    if(letter.done) {
-                        clearInterval(abcs);
-                        console.log("Now I know my ABC's");
-                    } else {
-                        console.log(letter.value);
-                    }
-                },
-
-                500);
-
-
+        courseInfo[id] = 41284;
+        console.log(courseInfo);
     </script>
 </body>
 </html>
