--- a/in_browser/index.html
+++ b/in_browser/index.html
@@ -18,6 +18,7 @@
         const courseInfo = {
             title: "ES6",
             topics: ["babel", "syntax", "functions", "classes"],
+            id: "js-course"
         };
 
         courseInfo[id] = 41284;
